test: performance tests of load and stress to validate system reliability
* test: performance tests of load and stress against the application

* refactor: remove redundant code

* docs: update read me

* docs: update read me

* docs: update open api spec
