# job-rotation-app-backend/openApiSpec.yml
@@ -349,69 +349,6 @@ paths:
           description: Bad Request
         '500':
           description: Internal Server Error
-  /staffing-manager/available-roles/{grade}:
-    get:
-      tags:
-        - Staffing Manager Actions
-      parameters:
-        - name: grade
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ListAllRolesResponse'
-        '400':
-          description: Bad Request
-        '500':
-          description: Internal Server Error
-  /staffing-manager/available-roles/{department}:
-    get:
-      tags:
-        - Staffing Manager Actions
-      parameters:
-        - name: department
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ListAllRolesResponse'
-        '400':
-          description: Bad Request
-        '500':
-          description: Internal Server Error
-  /staffing-manager/available-roles/{duration}:
-    get:
-      tags:
-        - Staffing Manager Actions
-      parameters:
-        - name: duration
-          in: path
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ListAllRolesResponse'
-        '400':
-          description: Bad Request
-        '500':
-          description: Internal Server Error
   /staffing-manager/available-roles/filter:
     get:
       tags:
@@ -495,8 +432,8 @@ paths:
                 staffingManagerEmailAddress:
                   type: string
       responses:
-        '201':
-          description: Created
+        '200':
+          description: OK
         '400':
           description: Bad Request
         '500':
